@@ -7,6 +7,6 @@ public class EmployeeNotFoundException extends RuntimeException {
   @Serial private static final long serialVersionUID = 7993421485272254985L;
 
   public EmployeeNotFoundException(long employeeId) {
-    super(String.format("Employee with id %d not found", employeeId));
+    super("Employee with id %d not found".formatted(employeeId));
   }
 }
